--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Miguel Somohano</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
   </head>
   <body>
 
-    <h1>My First Website</h1>
-    <p>My first paragraph.</p>
+    <header>
+      <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">
+          <img src="https://lh3.googleusercontent.com/proxy/ZFdMa2bJMYY0XgfqX44tljczzalGngx1wg5AH6GSkkCq6QIQNPCcOoXL9qPGJrgnZbgqPFV2bhQZgaTam5C-wMRtNW11al3YNlXEZ37JBH5RJ47SBzriCNDv0w3PS5IKPkiuvmiXDO4wucg" width="30" height="30" class="d-inline-block align-top" alt="">
+          MicSpinis
+        </a>
 
+
+        <div class="navbar-nav" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#hero">HERO<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact Me</a>
+            </li>
+          </ul>          
+        </div>
+
+      </nav>
+    </header>
+
+    <main>
+      <section id="hero"></section>
+      <section id="about"></section>
+      <section id="contact"></section>
+    </main>
+
+    <footer></footer>
   </body>
 </html>
