--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
           <img src="https://lh3.googleusercontent.com/proxy/ZFdMa2bJMYY0XgfqX44tljczzalGngx1wg5AH6GSkkCq6QIQNPCcOoXL9qPGJrgnZbgqPFV2bhQZgaTam5C-wMRtNW11al3YNlXEZ37JBH5RJ47SBzriCNDv0w3PS5IKPkiuvmiXDO4wucg" width="30" height="30" class="d-inline-block align-top" alt="">
           MicSpinis
         </a>
-
-
-        <div class="navbar-nav" id="navbarSupportedContent">
+        <!-- <div class="navbar-nav" id="navbarSupportedContent"> -->
+        <form class="form-inline">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="#hero">HERO<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -26,16 +25,33 @@
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact Me</a>
             </li>
-          </ul>          
-        </div>
-
+          </ul>
+        </form>          
+        <!-- </div> -->
       </nav>
     </header>
 
     <main>
-      <section id="hero"></section>
-      <section id="about"></section>
-      <section id="contact"></section>
+      <section id="hero">
+        <div class="section-inner">
+          <img src="https://lh3.googleusercontent.com/proxy/ZFdMa2bJMYY0XgfqX44tljczzalGngx1wg5AH6GSkkCq6QIQNPCcOoXL9qPGJrgnZbgqPFV2bhQZgaTam5C-wMRtNW11al3YNlXEZ37JBH5RJ47SBzriCNDv0w3PS5IKPkiuvmiXDO4wucg">
+          <h1>Hi, I´m Miguel Somohano</h1>
+        </div>
+      </section>
+
+      <section id="about">
+        <div class="section-inner">
+          <h2>About Me</h2>
+          <p>Actually i´m trainee in Tenaris Tamsa, i´m a Data Scientist</p>
+        </div>
+      </section>
+
+      <section id="contact">
+        <div class="section-inner">
+          <h2>Contact Me</h2>
+          <p>You can find me on:</p>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
