--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
           MicSpinis
         </a>
         <!-- <div class="navbar-nav" id="navbarSupportedContent"> -->
-        <form class="form-inline">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#hero">HERO<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact Me</a>
-            </li>
-          </ul>
-        </form>          
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Hero</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Me</a>
+          </li>
+        </ul>          
         <!-- </div> -->
       </nav>
     </header>
@@ -50,10 +48,18 @@
         <div class="section-inner">
           <h2>Contact Me</h2>
           <p>You can find me on:</p>
+          <ul>
+            <li>Twitter</li>
+            <li>Facebook</li>
+            <li>Instagram</li>
+
+          </ul>
         </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      © Copyright MicSpinis, 2020
+    </footer>
   </body>
 </html>
