--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <title>Miguel Somohano</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
+    <link href="https://fonts.googleapis.com/css?family=Plaster&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <header>
       <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#" id="cambio">
           <img src="https://lh3.googleusercontent.com/proxy/ZFdMa2bJMYY0XgfqX44tljczzalGngx1wg5AH6GSkkCq6QIQNPCcOoXL9qPGJrgnZbgqPFV2bhQZgaTam5C-wMRtNW11al3YNlXEZ37JBH5RJ47SBzriCNDv0w3PS5IKPkiuvmiXDO4wucg" width="30" height="30" class="d-inline-block align-top" alt="">
           MicSpinis
         </a>
         <!-- <div class="navbar-nav" id="navbarSupportedContent"> -->
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Hero</a>
+            <a class="nav-link active" href="#hero">Hero</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="#about">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Me</a>
+            <a class="nav-link" href="#contact">Contact Me</a>
           </li>
         </ul>          
         <!-- </div> -->
