nav-bar decoration

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
     <link href="https://fonts.googleapis.com/css?family=Plaster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -17,13 +18,13 @@
         <!-- <div class="navbar-nav" id="navbarSupportedContent"> -->
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" href="#hero">Hero</a>
+            <a class="nav-link active" href="#hero" id="cambio2">Hero</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About Me</a>
+            <a class="nav-link" href="#about" id="cambio2">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact Me</a>
+            <a class="nav-link" href="#contact" id="cambio2">Contact Me</a>
           </li>
         </ul>          
         <!-- </div> -->
