--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
       <section id="hero">
         <div class="section-inner">
-          <img src="https://lh3.googleusercontent.com/proxy/ZFdMa2bJMYY0XgfqX44tljczzalGngx1wg5AH6GSkkCq6QIQNPCcOoXL9qPGJrgnZbgqPFV2bhQZgaTam5C-wMRtNW11al3YNlXEZ37JBH5RJ47SBzriCNDv0w3PS5IKPkiuvmiXDO4wucg">
+          <img src="https://lh3.googleusercontent.com/proxy/ZFdMa2bJMYY0XgfqX44tljczzalGngx1wg5AH6GSkkCq6QIQNPCcOoXL9qPGJrgnZbgqPFV2bhQZgaTam5C-wMRtNW11al3YNlXEZ37JBH5RJ47SBzriCNDv0w3PS5IKPkiuvmiXDO4wucg" id="avatar">
           <h1>Hi, I´m Miguel Somohano</h1>
         </div>
       </section>
