nav-bar fixed top

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
 
     <header>
-      <nav class="navbar navbar-dark bg-dark">
+      <nav class="navbar navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#" id="cambio">
           <img src="https://lh3.googleusercontent.com/proxy/ZFdMa2bJMYY0XgfqX44tljczzalGngx1wg5AH6GSkkCq6QIQNPCcOoXL9qPGJrgnZbgqPFV2bhQZgaTam5C-wMRtNW11al3YNlXEZ37JBH5RJ47SBzriCNDv0w3PS5IKPkiuvmiXDO4wucg" width="30" height="30" class="d-inline-block align-top" alt="">
           MicSpinis
         </a>
-        <!-- <div class="navbar-nav" id="navbarSupportedContent"> -->
+
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" href="#hero" id="cambio2">Hero</a>
@@ -27,7 +27,7 @@
             <a class="nav-link" href="#contact" id="cambio2">Contact Me</a>
           </li>
         </ul>          
-        <!-- </div> -->
+        
       </nav>
     </header>
 
